manifests/dev/keycloak/Ingress-keycloak-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 26.0.5
    helm.sh/chart: keycloak-24.1.0
  name: keycloak-admin
  namespace: keycloak
spec:
  ingressClassName: traefik
  rules:
    - host: keycloak-admin.dev.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - keycloak-admin.dev.kronkltd.net
      secretName: keycloak-admin.dev.kronkltd.net-tls
