manifests/dev/keycloak/NetworkPolicy-keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 26.0.5
    helm.sh/chart: keycloak-24.1.0
  name: keycloak
  namespace: keycloak
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 7800
        - port: 8080
  podSelector:
    matchLabels:
      app.kubernetes.io/component: keycloak
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/name: keycloak
  policyTypes:
    - Ingress
    - Egress
